# MultiObjectTracking

./: .gitignore  CMakeLists.txt  README.md
include/: tracker.h
src/: test1.cpp  test2.cpp  tracker.cpp
