cmake_minimum_required(VERSION 2.8)


set (CMAKE_CXX_STANDARD 11)
FIND_PACKAGE(OpenCV 4.1.1 REQUIRED)
#FIND_PACKAGE(OpenCV REQUIRED)


ADD_LIBRARY(TRACKER SHARED src/tracker.cpp)
ADD_EXECUTABLE(out src/test1.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(TRACKER ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(out TRACKER)
